--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/blog.css">
     <title>Document</title>
 </head>
 <body>
     <h1>this is new one</h1>
+    <p>this is my first website .we have to check this what is going on in our website.</p>
 </body>
 </html>
